# dcf

./: .gitignore  README.md  app.py  company.py  keys.py  modeling.py  plotter.py  pyproject.toml  requirements.txt  wacc.py
dcf_models/: base.py  fcf.py  fcf_to_equity.py  nopat.py  operations.py
templates/: base.html  index.html  result.html
