[tool.poetry]
name = "dcf"
version = "0.1.0"
description = "The implementation of DCF with Web-Client for publicly traded stocks"
authors = ["Jack-0ut <yugin12s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
